Rework fish; make it work on freebsd

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "vim/bundle/vim-pathogen"]
 	path = vim/bundle/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "fish/fisherman"]
+	path = fish/fisherman
+	url = https://github.com/fisherman/fisherman
