brew pkg cleanup

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -15,6 +15,7 @@ brew "libyaml"
 brew "openssl"
 brew "readline"
 brew "ansible"
+brew "ossp-uuid"
 brew "python"
 brew "asciinema"
 brew "aspcud"
@@ -22,7 +23,6 @@ brew "autoconf"
 brew "automake"
 brew "aws-shell"
 brew "awscli"
-brew "berkeley-db"
 brew "binutils"
 brew "bison"
 brew "gettext"
@@ -75,7 +75,6 @@ brew "libicns", args: ["universal"]
 brew "libmagic"
 brew "libzip"
 brew "little-cms2"
-brew "macvim", args: ["with-override-system-vim"]
 brew "makedepend"
 brew "mosh"
 brew "most"
@@ -83,7 +82,6 @@ brew "net-snmp"
 brew "nmap"
 brew "oath-toolkit"
 brew "opam"
-brew "ossp-uuid"
 brew "parallel"
 brew "patchutils"
 brew "pinentry"
@@ -123,3 +121,5 @@ cask "vagrant"
 cask "virtualbox"
 cask "virtualbox-extension-pack"
 cask "visual-studio-code"
+cask "vlc"
+cask "wireshark"
