--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -7,6 +7,7 @@ tap "homebrew/core"
 tap "homebrew/fuse"
 tap "justwatchcom/gopass"
 tap "rcmdnk/file"
+tap "sinclairtarget/wst"
 tap "xo/xo"
 cask "java"
 cask "osxfuse"
@@ -113,6 +114,7 @@ brew "d12frosted/emacs-plus/emacs-plus"
 brew "esphen/wsta/wsta"
 brew "heroku/brew/heroku"
 brew "rcmdnk/file/brew-file"
+brew "sinclairtarget/wst/um"
 brew "xo/xo/usql"
 cask "chefdk"
 cask "google-cloud-sdk"
