--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -4,7 +4,6 @@ tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
-tap "homebrew/fuse"
 tap "justwatchcom/gopass"
 tap "rcmdnk/file"
 tap "sinclairtarget/wst"
@@ -15,9 +14,8 @@ brew "gdbm"
 brew "libyaml"
 brew "openssl"
 brew "readline"
-brew "ansible"
-brew "ossp-uuid"
 brew "python"
+brew "ansible"
 brew "asciinema"
 brew "aspcud"
 brew "autoconf"
@@ -36,9 +34,6 @@ brew "ctags"
 brew "curl"
 brew "dep"
 brew "direnv"
-brew "libksba"
-brew "pth"
-brew "dirmngr"
 brew "elixir"
 brew "fd"
 brew "ffmpeg"
@@ -54,14 +49,17 @@ brew "gnu-indent"
 brew "gnu-sed", args: ["with-default-names"]
 brew "gnu-tar"
 brew "nettle"
+brew "libksba"
+brew "pinentry"
 brew "jasper"
-brew "libtool", args: ["universal"]
+brew "libtool"
 brew "graphicsmagick"
 brew "hiredis"
 brew "htop"
 brew "httpie"
 brew "hub"
 brew "hyper"
+brew "little-cms2"
 brew "imagemagick"
 brew "iproute2mac"
 brew "ispell"
@@ -72,10 +70,9 @@ brew "jsonlint"
 brew "leiningen"
 brew "libcroco"
 brew "libgphoto2"
-brew "libicns", args: ["universal"]
+brew "libicns"
 brew "libmagic"
 brew "libzip"
-brew "little-cms2"
 brew "makedepend"
 brew "mosh"
 brew "most"
@@ -83,15 +80,16 @@ brew "net-snmp"
 brew "nmap"
 brew "oath-toolkit"
 brew "opam"
+brew "ossp-uuid"
 brew "parallel"
 brew "patchutils"
-brew "pinentry"
 brew "pinentry-mac"
 brew "popt"
 brew "postgresql"
+brew "pth"
 brew "ranger"
 brew "re2"
-brew "rebar@3"
+brew "rebar3"
 brew "redis"
 brew "remind"
 brew "rpm"
@@ -109,16 +107,16 @@ brew "tree"
 brew "unzip"
 brew "watch"
 brew "wget"
-brew "zip", link: true
+brew "zip"
 brew "d12frosted/emacs-plus/emacs-plus"
 brew "esphen/wsta/wsta"
 brew "heroku/brew/heroku"
 brew "rcmdnk/file/brew-file"
 brew "sinclairtarget/wst/um"
 brew "xo/xo/usql"
-cask "chefdk"
+cask "alfred"
 cask "google-cloud-sdk"
-cask "gpgtools"
+cask "iterm2"
 cask "vagrant"
 cask "virtualbox"
 cask "virtualbox-extension-pack"
