User macOS keychain; remove old hosts

--- a/ssh/config
+++ b/ssh/config
@@ -1,69 +1,5 @@
 Host *
   ServerAliveInterval 120
+  UseKeychain yes
+  AddKeysToAgent yes
 
-Host engineering-blog
-  User lczaplinski
-  Hostname 54.82.196.66
-
-Host staging
-  User lczaplinski
-  Hostname ssh.staging.nowthis.network
-  ProxyJump jumpbox
-
-Host prod
-  User lczaplinski
-  Hostname ssh.production.nowthis.network
-  ProxyJump jumpbox
-
-Host insights
-  User lczaplinski
-  Hostname ssh.insights.nowthis.network
-  ProxyJump jumpbox
-
-Host yeti
-  User lczaplinski
-  Hostname ssh.yeti.nowthis.network
-  ProxyJump jumpbox
-
-Host ci
-  User lczaplinski
-  Hostname ssh.ci.nowthis.network
-  ProxyJump jumpbox
-
-Host infra
-  User lczaplinski
-  Hostname ssh.infra.nowthis.network
-  ProxyJump jumpbox
-
-Host ufo
-  User lczaplinski
-  Hostname zeppelin.ufo.nowthis.network
-  ProxyJump jumpbox
-
-Host *.nowthis.network
-  User lczaplinski
-  ProxyJump jumpbox
-
-Host insights
-  User lczaplinski
-  Hostname ssh.infra.nowthis.network
-  ProxyJump jumpbox
-
-Host insights-testing
-  User lczaplinski
-  Hostname ssh.insights-testing.nowthis.network
-  ProxyJump jumpbox
-
-Host thebeast
-  User lczaplinski
-  Hostname ssh.thebeast.nowthis.network
-
-Host aruba
-  User L
-  Hostname 85.255.8.174
-
-Host jumpbox
-  User lczaplinski
-  IdentityFile ~/.ssh/aruba_rsa
-  Hostname jumpbox.eternal.p5.tiktalik.io
-  Port 22172
