--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,6 +3,7 @@ tap "esphen/wsta", "https://github.com/esphen/wsta.git"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "justwatchcom/gopass"
 tap "rcmdnk/file"
@@ -49,11 +50,14 @@ brew "gnu-indent"
 brew "gnu-sed", args: ["with-default-names"]
 brew "gnu-tar"
 brew "nettle"
+brew "gnutls"
 brew "libksba"
 brew "pinentry"
+brew "gnupg"
 brew "jasper"
 brew "libtool"
 brew "graphicsmagick"
+brew "haskell-stack"
 brew "hiredis"
 brew "htop"
 brew "httpie"
@@ -72,6 +76,7 @@ brew "libcroco"
 brew "libgphoto2"
 brew "libicns"
 brew "libmagic"
+brew "libsodium"
 brew "libzip"
 brew "makedepend"
 brew "mosh"
@@ -92,6 +97,7 @@ brew "re2"
 brew "rebar3"
 brew "redis"
 brew "remind"
+brew "ripgrep"
 brew "rpm"
 brew "ruby-install"
 brew "rustup-init"
@@ -100,6 +106,7 @@ brew "siege"
 brew "smartmontools"
 brew "sshfs"
 brew "terraform"
+brew "texinfo"
 brew "the_silver_searcher"
 brew "tig"
 brew "tldr"
@@ -115,6 +122,8 @@ brew "rcmdnk/file/brew-file"
 brew "sinclairtarget/wst/um"
 brew "xo/xo/usql"
 cask "alfred"
+cask "dropbox"
+cask "font-fira-code"
 cask "google-cloud-sdk"
 cask "iterm2"
 cask "vagrant"
