--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,15 +1,22 @@
+tap "crisidev/chunkwm"
 tap "d12frosted/emacs-plus"
 tap "esphen/wsta", "https://github.com/esphen/wsta.git"
 tap "heroku/brew"
 tap "homebrew/bundle"
 tap "homebrew/cask"
+tap "homebrew/cask-drivers"
+tap "homebrew/cask-eid"
 tap "homebrew/cask-fonts"
+tap "homebrew/cask-versions"
 tap "homebrew/core"
+tap "homebrew/services"
+tap "jmacdonald/amp"
 tap "justwatchcom/gopass"
+tap "koekeishiya/formulae"
 tap "rcmdnk/file"
 tap "sinclairtarget/wst"
+tap "vitorgalvao/tiny-scripts"
 tap "xo/xo"
-cask "java"
 cask "osxfuse"
 brew "gdbm"
 brew "libyaml"
@@ -23,6 +30,7 @@ brew "autoconf"
 brew "automake"
 brew "aws-shell"
 brew "awscli"
+brew "b2-tools"
 brew "binutils"
 brew "bison"
 brew "gettext"
@@ -37,6 +45,9 @@ brew "dep"
 brew "direnv"
 brew "elixir"
 brew "fd"
+brew "nettle"
+brew "gnutls"
+brew "little-cms2"
 brew "ffmpeg"
 brew "findutils"
 brew "fish"
@@ -44,13 +55,12 @@ brew "fzf"
 brew "mpfr"
 brew "gawk"
 brew "gd"
+brew "geeknote", args: ["HEAD"]
 brew "git"
 brew "gnu-getopt"
 brew "gnu-indent"
-brew "gnu-sed", args: ["with-default-names"]
+brew "gnu-sed"
 brew "gnu-tar"
-brew "nettle"
-brew "gnutls"
 brew "libksba"
 brew "pinentry"
 brew "gnupg"
@@ -63,20 +73,22 @@ brew "htop"
 brew "httpie"
 brew "hub"
 brew "hyper"
-brew "little-cms2"
 brew "imagemagick"
+brew "inetutils"
 brew "iproute2mac"
 brew "ispell"
 brew "oniguruma"
 brew "jq"
 brew "node"
 brew "jsonlint"
+brew "kustomize"
 brew "leiningen"
 brew "libcroco"
 brew "libgphoto2"
 brew "libicns"
 brew "libmagic"
 brew "libsodium"
+brew "libxml2"
 brew "libzip"
 brew "makedepend"
 brew "mosh"
@@ -91,6 +103,7 @@ brew "patchutils"
 brew "pinentry-mac"
 brew "popt"
 brew "postgresql"
+brew "postgresql@10"
 brew "pth"
 brew "ranger"
 brew "re2"
@@ -102,7 +115,9 @@ brew "rpm"
 brew "ruby-install"
 brew "rustup-init"
 brew "sane-backends"
+brew "shellcheck"
 brew "siege"
+brew "skaffold"
 brew "smartmontools"
 brew "sshfs"
 brew "terraform"
@@ -118,14 +133,26 @@ brew "zip"
 brew "d12frosted/emacs-plus/emacs-plus"
 brew "esphen/wsta/wsta"
 brew "heroku/brew/heroku"
+brew "jmacdonald/amp/amp"
+brew "koekeishiya/formulae/chunkwm"
+brew "koekeishiya/formulae/skhd"
 brew "rcmdnk/file/brew-file"
 brew "sinclairtarget/wst/um"
+brew "vitorgalvao/tiny-scripts/cask-repair"
 brew "xo/xo/usql"
 cask "alfred"
+cask "arduino"
+cask "balenaetcher"
+cask "discord"
 cask "dropbox"
 cask "font-fira-code"
+cask "font-hasklig"
+cask "font-hasklig-nerd-font"
 cask "google-cloud-sdk"
 cask "iterm2"
+cask "java"
+cask "lunastudio"
+cask "silicon-labs-vcp-driver"
 cask "vagrant"
 cask "virtualbox"
 cask "virtualbox-extension-pack"
